# pockepocke

./: .coverage  .cursorrules  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  main.py  oppo.pkl  opponent.pkl  player.pkl  pyproject.toml  requirements.txt  test_output.txt
AI/: monte_carlo_gene.py  monte_carlo_player.py  rulebase_player.py  tempCodeRunnerFile.py
client/: action_selector.html  game.html  game_client.js  game_client.py  index.html  play.html
data/: pockepocke.db  to_make_dir.txt
data/log/: log.md
docs/: architecture.md  blueprint.md  deck_rating_system.md  monte_carlo.md  multiplayer_class_design.md  multiplayer_design.md  trouble.md
game/: __init__.py  deck.py  energy.py  exceptions.py  game.py  player.py  utils.py
game/cards/: __init__.py  base_card.py  pockemon_card.py  tempCodeRunnerFile.py  tool_card.py  trainer_card.py
interface/: visualized.txt  visualizer.py
ratings/: deck_evaluator.py  rating_system.py  simulation_manager.py
server/: database.py  game_server.py  run_server.py  tempCodeRunnerFile.py
server/debug/: debug.py
static/css/: deck_list.css  play.css  style.css
static/js/: deck_builder.js  deck_list.js  game.js  main.js
templates/: deck_builder.html  deck_list.html  game.html  index.html  play.html
tests/: deck_test.py  energy_test.py  game_test.py  player_test.py  pockemon_card_test.py  psycic_card_test.py  trainer_test.py
tests/AI/: test_monte_carlo_gene.py  test_monte_carlo_player.py  test_rulebase_player.py
tests/cards/: test_card_lists.py
tests/onlineplay/: game_server_test.py
(+9 files in other folders)
