[project]
name = "pockepocke"
version = "0.1.0"
description = "ポケモンカードゲーム"
requires-python = ">=3.10"

[tool.uv]
requirements = "requirements.txt"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=."
